--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
 	"name": "fcc-learn-npm-package-json",
 	"author": "Tim Woodson",
 	"main": "server.js",
+	"dependencies": {
+		"express": "^4.14.0"
+	},
 	"scripts": {
 		"start": "node server.js",
 		"app_build_command": "npm run docs:build"
